<resources>
    <string name="app_name">Tripoholic</string>
    <string name="smallTrips">Small Trips</string>
    <string name="pop_dest">Popular Destination</string>
    <string-array name="gen_spin">gen</string-array>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="full_name">Full Name</string>
    <string name="no_of_seats">No of Seats</string>
    <string name="dob">Date of Birth (DD-MM-YYYY)</string>
    <string name="mail">E-mail</string>
    <string name="contact">Contact no.</string>
    <string name="water_bodies">Water Bodies</string>
    <string name="desert_sides">Desert Sides</string>
    <string name="holy_places">Holy Places</string>
    <string name="view_more">View More</string>
    <string name="register">Register</string>
    <string name="hilly_areas">Hilly Areas</string>
    <string name="textview">TextView</string>
    <string name="tour_name">Hanwantya Tapu</string>
    <string name="location">Khandwa, MP</string>
    <string name="duration">5D/4N</string>
    <string name="food">food</string>
    <string name="group_music">Group Music</string>
    <string name="bonfire">Bonfire</string>
    <string name="book_now">Book Now</string>
    <string name="camping">Camping</string>
    <string name="delicious_food">Delicious Food</string>
    <string name="sightseeing">Sightseeing</string>
    <string name="local_guide">Local Guide</string>
    <string name="price">- 2500/person</string>
    <string name="music">TODO</string>
    <string name="camp">TODO</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="user_profile">user profile</string>
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="search_msg">Now Search for the places around \n you and Get Ready for \n Exciting Holidays.</string>
    <string name="locat">Search Your Location</string>
    <string name="searchEg">Eg. Indore</string>
    <string name="confirm">Confirm</string>
    <string name="trip_name">Trip Name</string>
    <string name="or">OR</string>
    <string name="qrScan">Click here to Scan QR Code</string>
    <string name="upi">Enter UPI id</string>
    <string name="india"><u>Made in India</u>❣️</string>

    <!--    admin Stuffs-->
    <string name="add">Add Stuffs</string>
    <string name="payment">Payment Option</string>
    <string name="add_trip">Add New Trip</string>
    <string name="add_tour">Add New Tour</string>
    <string name="modify">Modify Trip</string>
    <string name="close">Close</string>

    <!--    Database connectivity-->
    <string name="url">http://192.168.237.177/TourAndTrips/</string>
    <string name="next">Next</string>

</resources>