<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#283350"
    android:translationZ="10dp"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="wrap_content"
        android:layout_height="667dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="1dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:paddingStart="5dp"
                app:cardBackgroundColor="#05FFFFFF"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#0272B45A"
                    android:contentDescription="@string/todo"
                    android:focusable="auto"
                    android:foregroundGravity="top"
                    android:foregroundTint="#DD3636"
                    android:foregroundTintMode="add"
                    app:srcCompat="@drawable/hanu" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="120dp"
                android:backgroundTint="#D81B60"
                android:onClick="TourDetail"
                android:text="@string/view_more"
                android:textAllCaps="false"
                android:textColor="#070707"
                app:cornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="#D81B60"
                android:onClick="Register"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#050505"
                app:cornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="@+id/button3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button3" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="71dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#D81B60"
                android:gravity="center|start"
                android:hapticFeedbackEnabled="false"
                android:onClick="SmallTrips"
                android:text="@string/smallTrips"
                android:textAllCaps="false"
                android:textColor="#050505"
                android:textSize="30sp"
                android:textStyle="normal"
                app:cornerRadius="30dp"
                app:icon="@drawable/expand"
                app:iconGravity="end"
                app:iconTint="#0B0B0B"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="420dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#D81B60"
                android:clipToPadding="true"
                android:paddingStart="5dp"
                android:paddingTop="30dp"
                android:paddingEnd="5dp"
                app:cardBackgroundColor="#3F51B5"
                app:cardCornerRadius="30dp"
                app:cardUseCompatPadding="false"
                app:contentPadding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/pop_dest"
                    android:textColor="#050505"
                    android:textSize="30sp"
                    android:translationZ="3dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|fill_horizontal"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="35dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imageButton4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#00FFFFFF"
                            android:contentDescription="@string/app_name"
                            app:srcCompat="@drawable/island"
                            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/water_bodies"
                            android:textColor="#040404"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imageButton3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#03FFFFFF"
                            android:clickable="true"
                            android:contentDescription="@string/app_name"
                            android:focusable="true"
                            app:srcCompat="@drawable/temple" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/holy_places"
                            android:textColor="#050505"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="230dp"
                    android:baselineAligned="false"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginEnd="35dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imageButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#05FFFFFF"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/hill"
                            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/hilly_areas"
                            android:textColor="#0A0B0B"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imageButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="#03FFFFFF"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/desert"
                            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck,ImageContrastCheck" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/desert_sides"
                            android:textColor="#070707"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoText="false"
                android:background="#112A4B68"
                android:backgroundTint="#03FFB500"
                android:backgroundTintMode="src_in"
                android:padding="1dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/tour_name"
                android:textAllCaps="false"
                android:textColor="#FAF8F8"
                android:textSize="25sp"
                android:textStyle="bold"
                android:translationZ="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button2"
                app:layout_constraintStart_toStartOf="@+id/button2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.342" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#021E88E5"
                android:paddingStart="5dp"
                android:text="@string/duration"
                android:textColor="#FBFAFA"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationZ="3dp"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="1dp"
        android:background="#F6C103"
        android:backgroundTint="#F6C103"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3">

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="#02FFFFFF"
            android:contentDescription="@string/user_profile"
            android:onClick="Account"
            app:srcCompat="@drawable/profile" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/search"
            android:onClick="SearchTrip"
            app:srcCompat="@drawable/search" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#07FFFFFF"
            android:contentDescription="@string/home"
            app:srcCompat="@drawable/home" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>